# tagging-tool

./: README.md  setup.cfg
tagging_tool/: __init__.py  tagging.py  utils.py
tagging_tool/static/: style.css
tagging_tool/templates/: base.html
tagging_tool/templates/tagging/: tag.html
