[metadata]
name = tagging-tool
version = 1.0.0
url = 
license = MIT
maintainer = g.wilczynski
maintainer_email = g.wilczynski95@gmail.com
description = Fast tagging tool written in Flask.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    numpy
    Pillow

[coverage:run]
branch = True
source =
    tagging_tool
